# Blackjack

./: CardCounter1.py  CardCounterCam.py  README.md  camera_test1.py  pyproject.toml  requirements.txt
